Mobile version almost finished

--- a/starter_code/stylesheets/style.css
+++ b/starter_code/stylesheets/style.css
@@ -8,3 +8,183 @@ paragraph yellow: #ECB12F
 links blue: #2E71A6
 footer links grey: #454245
 */
+*{
+    font-family: Arial, Helvetica, sans-serif;
+}
+nav{
+    display: flex;
+    background-color: #540B51;
+    justify-content: space-between;
+    
+}
+nav ul{
+    list-style: none;
+}
+
+.slack_logo{
+    height: 25px;
+    
+}
+/*-----------------------------------*/
+header{
+    background-color: #540B51;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+
+}
+.header-title{
+    color: white;
+    text-align: center;
+}
+#header-p{
+    text-align: center;
+}
+.slack-price{
+    color: #ECB12F;
+}
+.how-long{
+    color: white;
+}
+.header-buttons{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 10px;
+}
+.sign-email{
+    width: 90%;
+    height: 45px;
+    color: #540B51;
+    font-weight: 800;
+    margin-bottom: 10px;
+    border: none;
+    border-radius: 3px;
+}
+.sign-google img{
+    height: 20px;
+    background-color: white;
+
+}
+.sign-google{
+    width: 90%;
+    height: 45px;
+    color: white;
+    font-weight: 800;
+    background-color: #4285F4;
+    border: none;
+    border-radius: 3px;
+    margin-bottom: 30px;
+}
+.app-screenshot{
+    width: 100%;
+}
+/*-----------------------------------------------*/
+#partners{
+    background-color: #F3EAE2;
+    align-content: center;
+}
+#partners .partners-logo{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 10px 5px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    
+}
+#partners img{
+    height: 40px;
+    margin: 10px;
+}
+#partners p{
+    font-weight: bold;
+    text-align: center;
+    font-size: 18px;
+    margin-top: 30px;
+}
+/*------------------------------------------------*/
+#comunity-data{
+    text-align: center;
+    margin-top: 10%;
+    margin-bottom: 10%;
+}
+#comunity-data .title{
+    color: #540B51;
+    font-size: 30px;
+    
+    
+}
+#comunity-data .subtitle{
+    font-weight: 600;
+    margin-bottom: 10%;
+}
+
+#com-data-list{
+    list-style: none;
+}
+#com-data-list span{
+    color: #540B51;
+    font-size: 40px;
+    font-weight: bold;
+}
+#com-data-list .text{
+    font-weight: bold;
+    margin: 0 25%;
+}
+/*---------------------------------------*/
+#closing-sale{
+    display: flex;
+    flex-direction: column;
+    background-color: #540B51;
+    text-align: center;
+    align-items: center;
+}
+
+#closing-sale h3{
+    color: white;
+    font-size: 30px;
+}
+#closing-sale button{
+    width: 90%;
+    height: 45px;
+    margin-bottom: 10px;
+    border-radius: 3px;
+    font-weight: 800;
+    font-size: 15px;
+}
+
+#closing-sale .slack-free{
+    background-color: white;
+    color: #540B51;
+    border: none;
+}
+#closing-sale .slack-premium{
+    background-color:#540B51;
+    color: white;
+    border-color: white;
+    margin-bottom: 10%;
+}
+/*----------------------------------------------*/
+#footer-ul{
+    margin: 40px 0;
+    list-style: none;
+
+}
+
+#footer-ul li{
+    margin-bottom: 10px;
+
+}
+
+#socialmedia-ul{
+    display: flex;
+    list-style: none;
+    justify-content: space-between;
+}
+#copyrights{
+    color: #454245;
+    display: flex;
+    flex-wrap: wrap;
+    text-align: center;
+}
