Responsive Design for above 1000px

--- a/starter_code/stylesheets/style.css
+++ b/starter_code/stylesheets/style.css
@@ -11,6 +11,7 @@ footer links grey: #454245
 *{
     font-family: Arial, Helvetica, sans-serif;
 }
+body{margin: 0;}
 nav{
     display: flex;
     background-color: #540B51;
@@ -19,19 +20,30 @@ nav{
 }
 nav ul{
     list-style: none;
+    display: flex;
+    justify-content: space-around;
+}
+#nav-list{
+    display: flex;
+    justify-content: space-around;
+}
+#nav-list a{
+    color: white;
+    text-decoration: none;
 }
 
 .slack_logo{
     height: 25px;
     
 }
+hr{
+    color: lightgrey;
+}
 /*-----------------------------------*/
 header{
     background-color: #540B51;
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
-
 }
 .header-title{
     color: white;
@@ -64,6 +76,7 @@ header{
 .sign-google img{
     height: 20px;
     background-color: white;
+    margin-right: 20px;
 
 }
 .sign-google{
@@ -75,6 +88,9 @@ header{
     border: none;
     border-radius: 3px;
     margin-bottom: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .app-screenshot{
     width: 100%;
@@ -112,14 +128,11 @@ header{
 #comunity-data .title{
     color: #540B51;
     font-size: 30px;
-    
-    
 }
 #comunity-data .subtitle{
     font-weight: 600;
     margin-bottom: 10%;
 }
-
 #com-data-list{
     list-style: none;
 }
@@ -139,6 +152,7 @@ header{
     background-color: #540B51;
     text-align: center;
     align-items: center;
+    margin-bottom: 25px;
 }
 
 #closing-sale h3{
@@ -184,7 +198,130 @@ header{
 }
 #copyrights{
     color: #454245;
-    display: flex;
-    flex-wrap: wrap;
     text-align: center;
+    margin-bottom: 30px;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media (min-width: 1000px){
+    header{
+        display: flex;
+        flex-direction: row;
+        align-content: space-between;
+    }
+    #header-img{
+        
+    }
+    .header-title{
+        font-size: 50px;
+        text-align: left;
+        margin-left: 7%;
+        margin-bottom: 30%;
+    }
+    #header-p{
+        font-size: 25px;
+        text-align: left;
+        margin-left: 7%;
+    }
+    .header-buttons{
+        display: flex;
+        flex-direction: row;
+        align-items: left;
+        margin-left: 7%;
+        margin-bottom: 15%;
+    }
+    .sign-email{
+        font-size: 14px;
+        margin-bottom: 0;
+        height: 50px;
+        width: 40%;
+    }
+    .sign-google img{
+        height: 20px;
+    }
+    .sign-google{
+        font-size: 14px;
+        height: 50px;
+        width: 40%;
+        margin-left: 3%;
+        margin-bottom: 0;
+    }
+    .app-screenshot{
+        margin-top: 10%;
+        margin-left: 10%;
+        width: 50%;
+    }
+    /*--------------------------------------------*/
+    #partners p{
+        font-size: 25px;
+    }
+    #partners .partners-logo{
+        justify-content: space-around;
+    }
+    /*---------------------------------------*/
+    #comunity-data{
+        margin-top: 5%;
+        margin-bottom: 5%;
+    }
+    #comunity-data .title{
+        font-size: 45px;
+    }
+    #comunity-data .subtitle{
+        margin-bottom: 2%;
+    }
+    #com-data-list{
+        display: flex;
+        justify-content: space-between;
+    }
+    #com-data-list span{
+        font-size: 50px;
+        
+    }
+    #com-data-list .text{
+        text-align: left;
+        margin: 0 10%;
+    }
+    /*----------------------------------------*/
+    #closing-sale h3{
+        font-size: 45px;
+    }
+    #closing-sale button{
+        width: 200px;
+        height: 55px;
+        border-radius: 3px;
+        font-weight: 800;
+        font-size: 20px;
+    }
+    /*----------------------------------------*/
+    #footer-ul{
+        display: flex;
+        font-weight: bold;
+        justify-content: space-around;
+    }
+    #socialmedia-ul{
+        display: flex;
+        justify-content: flex-start;
+    }
+    #socialmedia-ul li{
+        margin-left: 5%;
+    }
+}
+
